Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9536

MR: LND tunables not set properly if multiple interfaces are configured simultaneously

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      If a yaml file configures multiple interfaces in one go, only the first interface is configured with the LND tunables. The other interfaces are not.

      Also adding ntx tunable to be configurable from lnetctl. This will allow users not to rely on the ko2iblnd.conf to configure the recommended setting for increased OPA performance. It will also allow NIs to be configured with their own unique tunable values.

            ashehata Amir Shehata (Inactive)
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: